--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Closebook Chat app">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="chatapp/favicon.png">
     <title>Closebook inc.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
